# corpuschars

./: .gitignore  .gitmodules  README.md  completion.txt  install-schritte_pdm.txt  pyproject.toml  user_stories_hg.txt
.github/ISSUE_TEMPLATE/: user-story.md
src/corpuschars/: parse_xml_corpus.py
src/s_e/: aufbau_char_matrix.py  aufbau_char_matrix_o.py  aufbau_character_matrix.py  character_count.py  character_count_full.py  create_corp_list.py
tests/: test_aufbau_char_matrix.py  test_aufbau_char_matrix_o.py  test_aufbau_character_matrix.py  test_parse_xml_corpus.py
tests/data/: README.md
tests/data/xml_test/: dat_1.xml  dat_2.xml  dat_3.xml
